Don't claim BridgedContentView can't be first responder when it's first responder

BridgedContentView can and should be first responder when a browser chrome
element is focused, but was changed to always respond |NO| to
|acceptsFirstResponder| in https://chromium-review.googlesource.com/c/chromium/src/+/670479

This doesn't prevent it from being made first responder explicitly, but
is meant to prevent mouse-clicks on non-interactable chrome from stealing
focus from web content*

Unfortunately, when ordering a window in, if the window's first responder
claims not to accept first responder, AppKit finds one which will.
I don't think this is reproable in normal use, but it breaks some
interactive_ui_tests.

This change is a variation on a comment tapted@ made on the original CL.
Now, we only claim to accept first responder if we are already first
responder.

* Though I can't actually repro this by changing the method to always
return |YES|, so who knows.

Bug: 822824
Change-Id: I7ed3334f5ddd8ef9334acb13f6b6ea71529b0196
Reviewed-on: https://chromium-review.googlesource.com/971945
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544717}
Former-commit-id: caf6dca0b9885dc1e63e73d48fe3e4807478ca8a